unpackaged/main/default/objects/Opportunity/fields/Accord_Cadre__c.field-meta.xml
<CustomField>
    <fullName>Accord_Cadre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accord - Cadre</label>
    <referenceTo>Framework_Agreement__c</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>Opportunites</relationshipName>
    <type>Lookup</type>
</CustomField>