unpackaged/main/default/objects/Opportunity/fields/Account_Identifiant_National__c.field-meta.xml
<CustomField>
    <fullName>Account_Identifiant_National__c</fullName>
    <formula>Account.IdentifiantNational__c</formula>
    <label>Account_Identifiant_National</label>
    <type>Text</type>
</CustomField>