unpackaged/main/default/objects/Opportunity/fields/Account_Type_Identifiant_National__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_Identifiant_National__c</fullName>
    <formula>TEXT(Account.TypeIdentifiantNational__c )</formula>
    <label>Account_Type_Identifiant_National</label>
    <type>Text</type>
</CustomField>