unpackaged/main/default/objects/Opportunity/fields/Activite_Principale_Exercee__c.field-meta.xml
<CustomField>
    <fullName>Activite_Principale_Exercee__c</fullName>
    <formula>Account.ActivitePrincipaleExercee__c</formula>
    <label>Activité Principale Exercée</label>
    <type>Text</type>
</CustomField>