unpackaged/main/default/objects/Opportunity/fields/Agrement__c.field-meta.xml
<CustomField>
    <fullName>Agrement__c</fullName>
    <description>Agrément Sfac + Date Agrément</description>
    <formula>IF(ISBLANK(Account.AgrementSFAC__c),&quot;###&quot;,TEXT(ROUND(Account.AgrementSFAC__c,2) ))  &amp; &quot; // &quot; &amp; IF(ISBLANK(Account.DateAgrementEH__c),&quot;###&quot;,IF(LEN(TEXT(DAY(Account.DateAgrementEH__c))) &gt; 1 , TEXT(DAY(Account.DateAgrementEH__c)), &quot;0&quot; + TEXT(DAY(Account.DateAgrementEH__c)))+ &quot;-&quot; +IF(LEN(TEXT(MONTH(Account.DateAgrementEH__c))) &gt; 1 , TEXT(MONTH(Account.DateAgrementEH__c)), &quot;0&quot; + TEXT(MONTH(Account.DateAgrementEH__c)))+&quot;-&quot; +TEXT(YEAR(Account.DateAgrementEH__c)))</formula>
    <label>Agrément</label>
    <type>Text</type>
</CustomField>