unpackaged/main/default/objects/Opportunity/fields/Agrement_demande__c.field-meta.xml
<CustomField>
    <fullName>Agrement_demande__c</fullName>
    <label>Agrément demandé</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>