unpackaged/main/default/objects/Opportunity/fields/AppelOffre__c.field-meta.xml
<CustomField>
    <fullName>AppelOffre__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appel d&#39;offre</label>
    <type>Checkbox</type>
</CustomField>