unpackaged/main/default/objects/Opportunity/fields/Average_GOB__c.field-meta.xml
<CustomField>
    <fullName>Average_GOB__c</fullName>
    <formula>CarnetCommande__c/ Quantite__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average GOB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>