unpackaged/main/default/objects/Opportunity/fields/BusinessLine__c.field-meta.xml
<CustomField>
    <fullName>BusinessLine__c</fullName>
    <formula>SalesAreaData__r.BusinessLine__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ligne de produit</label>
    <type>Text</type>
</CustomField>