unpackaged/main/default/objects/Opportunity/fields/CarnetCommandeBrutListold__c.field-meta.xml
<CustomField>
    <fullName>CarnetCommandeBrutListold__c</fullName>
    <formula>IF( 
OR(RecordTypeId=$Label.OPP_RecordTypeId_OppMultiEnCours15, 
RecordTypeId=$Label.OPP_RecordTypeId_OppMultiLectureSeule15, 
RecordTypeId=$Label.OPP_RecordTypeId_OppMultiProduits15 
), 
null, 
Amount 
)</formula>
    <label>Carnet de commande brut total old</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>