unpackaged/main/default/objects/Opportunity/fields/Catalogue_FlowInput__c.field-meta.xml
<CustomField>
    <fullName>Catalogue_FlowInput__c</fullName>
    <label>Catalogue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BR_ST</fullName>
            </value>
            <value>
                <fullName>BR_ST_FRANCE BOISSON</fullName>
            </value>
            <value>
                <fullName>FS_PF</fullName>
            </value>
            <value>
                <fullName>FS_PF_API</fullName>
            </value>
            <value>
                <fullName>FS_PF_COMPASS</fullName>
            </value>
            <value>
                <fullName>FS_PF_DPT-REST.</fullName>
            </value>
            <value>
                <fullName>FS_PF_ELIOR</fullName>
            </value>
            <value>
                <fullName>FS_PF_EUROTRANS</fullName>
            </value>
            <value>
                <fullName>FS_PF_SODEXO</fullName>
            </value>
            <value>
                <fullName>FS_ST</fullName>
            </value>
            <value>
                <fullName>HY_ST</fullName>
            </value>
            <value>
                <fullName>HY_ST_KALHYGE</fullName>
            </value>
            <value>
                <fullName>SE_ST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>