unpackaged/main/default/objects/Opportunity/fields/Categorie__c.field-meta.xml
<CustomField>
    <fullName>Categorie__c</fullName>
    <label>Catégorie</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SousFamille__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>0m50</fullName>
            </value>
            <value>
                <fullName>0m70</fullName>
            </value>
            <value>
                <fullName>0m90</fullName>
            </value>
            <value>
                <fullName>1m00</fullName>
            </value>
            <value>
                <fullName>1m10</fullName>
            </value>
            <value>
                <fullName>1m30</fullName>
            </value>
            <value>
                <fullName>1m33</fullName>
            </value>
            <value>
                <fullName>1m40</fullName>
            </value>
            <value>
                <fullName>1m50</fullName>
            </value>
            <value>
                <fullName>1m55</fullName>
            </value>
            <value>
                <fullName>1m90</fullName>
            </value>
            <value>
                <fullName>2m00</fullName>
            </value>
            <value>
                <fullName>2m50</fullName>
            </value>
            <value>
                <fullName>Armoire</fullName>
            </value>
            <value>
                <fullName>C22</fullName>
            </value>
            <value>
                <fullName>C22 (Dry)</fullName>
            </value>
            <value>
                <fullName>C24</fullName>
            </value>
            <value>
                <fullName>C24 (Dry)</fullName>
            </value>
            <value>
                <fullName>C26</fullName>
            </value>
            <value>
                <fullName>C26 (Dry)</fullName>
            </value>
            <value>
                <fullName>C28</fullName>
            </value>
            <value>
                <fullName>C28 (Dry)</fullName>
            </value>
            <value>
                <fullName>C29</fullName>
            </value>
            <value>
                <fullName>C29 (Dry)</fullName>
            </value>
            <value>
                <fullName>CF10</fullName>
            </value>
            <value>
                <fullName>CF20</fullName>
            </value>
            <value>
                <fullName>CF25</fullName>
            </value>
            <value>
                <fullName>CF30</fullName>
            </value>
            <value>
                <fullName>CF35</fullName>
            </value>
            <value>
                <fullName>CF50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>