unpackaged/main/default/objects/Opportunity/fields/Caution_r_gl_e_ce_jour__c.field-meta.xml
<CustomField>
    <fullName>Caution_r_gl_e_ce_jour__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caution réglée ce jour</label>
    <type>Checkbox</type>
</CustomField>