unpackaged/main/default/objects/Opportunity/fields/Caution_TVA__c.field-meta.xml
<CustomField>
    <fullName>Caution_TVA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caution TVA</label>
    <type>Checkbox</type>
</CustomField>