unpackaged/main/default/objects/Opportunity/fields/CGL__c.field-meta.xml
<CustomField>
    <fullName>CGL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conditions Générales de Location</label>
    <referenceTo>Framework_Agreement__c</referenceTo>
    <relationshipLabel>Opportunités (Conditions Générales de Location)</relationshipLabel>
    <relationshipName>Opportunity_CGL</relationshipName>
    <type>Lookup</type>
</CustomField>