unpackaged/main/default/objects/Opportunity/fields/Code_division__c.field-meta.xml
<CustomField>
    <fullName>Code_division__c</fullName>
    <formula>IF(
ISPICKVAL(TypeProduits__c  , &#39;Véhicules Frigorifiques&#39;), &#39;F&#39;,
IF(ISPICKVAL(TypeProduits__c  , &#39;Meubles&#39;), &#39;M&#39;,
IF(ISPICKVAL(TypeProduits__c  , &#39;Containers&#39;), &#39;C&#39;,
IF(ISPICKVAL(TypeProduits__c  , &#39;Véhicules Secs&#39;), &#39;S&#39;, 
IF(ISPICKVAL(TypeProduits__c  , &#39;Refrigerated vehicle&#39;), &#39;F&#39;, 
IF(ISPICKVAL(TypeProduits__c  , &#39;Dry vehicle&#39;), &#39;S&#39;, &#39;&#39; )
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code division</label>
    <type>Text</type>
</CustomField>