unpackaged/main/default/objects/Opportunity/fields/Code_Pays_FlowInput__c.field-meta.xml
<CustomField>
    <fullName>Code_Pays_FlowInput__c</fullName>
    <label>Code Pays</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AE</fullName>
            </value>
            <value>
                <fullName>AE_EN</fullName>
            </value>
            <value>
                <fullName>AE_FR</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>AT_DE</fullName>
            </value>
            <value>
                <fullName>AT_FR</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>BE_DE</fullName>
            </value>
            <value>
                <fullName>BE_FR</fullName>
            </value>
            <value>
                <fullName>BE_NL</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>CH_DE</fullName>
            </value>
            <value>
                <fullName>CH_FR</fullName>
            </value>
            <value>
                <fullName>CH_IT</fullName>
            </value>
            <value>
                <fullName>CZ</fullName>
            </value>
            <value>
                <fullName>CZ_CZ</fullName>
            </value>
            <value>
                <fullName>CZ_FR</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>DE_DE</fullName>
            </value>
            <value>
                <fullName>DE_FR</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>ES_ES</fullName>
            </value>
            <value>
                <fullName>ES_FR</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>FR_FR</fullName>
            </value>
            <value>
                <fullName>GB</fullName>
            </value>
            <value>
                <fullName>GB_EN</fullName>
            </value>
            <value>
                <fullName>GB_FR</fullName>
            </value>
            <value>
                <fullName>IE</fullName>
            </value>
            <value>
                <fullName>IE_EN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>