unpackaged/main/default/objects/Opportunity/fields/Code_PF_FlowInput__c.field-meta.xml
<CustomField>
    <fullName>Code_PF_FlowInput__c</fullName>
    <label>CODE PF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100E19 CF</fullName>
            </value>
            <value>
                <fullName>100E19 CH</fullName>
            </value>
            <value>
                <fullName>100E19 CH KALHYGE</fullName>
            </value>
            <value>
                <fullName>100E19 CH KALHYGE - OPTIONS</fullName>
            </value>
            <value>
                <fullName>100E19 CS</fullName>
            </value>
            <value>
                <fullName>100E21 CF</fullName>
            </value>
            <value>
                <fullName>100E21 CH</fullName>
            </value>
            <value>
                <fullName>100E21 CS</fullName>
            </value>
            <value>
                <fullName>1018 CF</fullName>
            </value>
            <value>
                <fullName>1018 CH</fullName>
            </value>
            <value>
                <fullName>1018 CS</fullName>
            </value>
            <value>
                <fullName>1021 CF</fullName>
            </value>
            <value>
                <fullName>1021 CS</fullName>
            </value>
            <value>
                <fullName>120E19 CB</fullName>
            </value>
            <value>
                <fullName>120E19 CB_LIB</fullName>
            </value>
            <value>
                <fullName>120E19 CBL</fullName>
            </value>
            <value>
                <fullName>120E19 CF</fullName>
            </value>
            <value>
                <fullName>120E19 CH</fullName>
            </value>
            <value>
                <fullName>120E19 CH KALHYGE</fullName>
            </value>
            <value>
                <fullName>120E19 CH KALHYGE - OPTIONS</fullName>
            </value>
            <value>
                <fullName>120E19 CS</fullName>
            </value>
            <value>
                <fullName>120E21 CB</fullName>
            </value>
            <value>
                <fullName>120E21 CF</fullName>
            </value>
            <value>
                <fullName>120E21 CH</fullName>
            </value>
            <value>
                <fullName>120E21 CS</fullName>
            </value>
            <value>
                <fullName>120E22 CF</fullName>
            </value>
            <value>
                <fullName>120E22 CS</fullName>
            </value>
            <value>
                <fullName>120EL21 G CB</fullName>
            </value>
            <value>
                <fullName>120EL21 G CBL</fullName>
            </value>
            <value>
                <fullName>120EL21 G CF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>