unpackaged/main/default/objects/Opportunity/fields/Commentaire__c.field-meta.xml
<CustomField>
    <fullName>Commentaire__c</fullName>
    <description>Commentaire DNP</description>
    <label>Commentaire</label>
    <type>TextArea</type>
</CustomField>