unpackaged/main/default/objects/Opportunity/fields/Commentaire_Reways__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_Reways__c</fullName>
    <label>Commentaire</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>