unpackaged/main/default/objects/Opportunity/fields/Commentaires_CM__c.field-meta.xml
<CustomField>
    <fullName>Commentaires_CM__c</fullName>
    <description>champ commentaire pour CM</description>
    <label>Commentaires CM</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>