unpackaged/main/default/objects/Opportunity/fields/Compensation_avec_caution_r_gularis_e__c.field-meta.xml
<CustomField>
    <fullName>Compensation_avec_caution_r_gularis_e__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compensation avec caution régularisée</label>
    <type>Checkbox</type>
</CustomField>