unpackaged/main/default/objects/Opportunity/fields/Conditions_Dero__c.field-meta.xml
<CustomField>
    <fullName>Conditions_Dero__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conditions Déro</label>
    <referenceTo>Derogation__c</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>Opportunit_s</relationshipName>
    <type>Lookup</type>
</CustomField>