unpackaged/main/default/objects/Opportunity/fields/Contact_B2C__c.field-meta.xml
<CustomField>
    <fullName>Contact_B2C__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact B2C</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Champ doit être renseigné avec un contact B2C</errorMessage>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Particulier (B2C)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunités (Contact B2C)</relationshipLabel>
    <relationshipName>Opportunites_ContactB2C</relationshipName>
    <type>Lookup</type>
</CustomField>