unpackaged/main/default/objects/Opportunity/fields/Contact_sur_Site__c.field-meta.xml
<CustomField>
    <fullName>Contact_sur_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact sur Site</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>