unpackaged/main/default/objects/Opportunity/fields/ContratAttribueA__c.field-meta.xml
<CustomField>
    <fullName>ContratAttribueA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrat attribué à</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Le compte choisi doit être un compte concurrent qui opère dans le pays du compte de cette opportunité.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Compte Concurrent</value>
        </filterItems>
        <filterItems>
            <field>Account.TECHPaysOperation__c</field>
            <operation>contains</operation>
            <valueField>$Source.TECHPaysCompte__c</valueField>
        </filterItems>
        <filterItems>
            <field>Account.Statut__c</field>
            <operation>equals</operation>
            <value>Validé</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunités Perdues</relationshipLabel>
    <relationshipName>OpportunitesPerdues</relationshipName>
    <type>Lookup</type>
</CustomField>