unpackaged/main/default/objects/Opportunity/fields/ContratOKpourEdition__c.field-meta.xml
<CustomField>
    <fullName>ContratOKpourEdition__c</fullName>
    <formula>IF( 
AND(
NB_BP_non_conforme__c=0,
NB_Contact_DonneurDordre__c&gt;0,
Nb_BP_Livre__c&gt;0
)
, 
TRUE, 
FALSE)</formula>
    <label>ContratOKpourEdition</label>
    <type>Checkbox</type>
</CustomField>