unpackaged/main/default/objects/Opportunity/fields/Couleur__c.field-meta.xml
<CustomField>
    <fullName>Couleur__c</fullName>
    <defaultValue>&quot;RYF&quot;</defaultValue>
    <label>Couleur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BYF</fullName>
            </value>
            <value>
                <fullName>RYF</fullName>
                <default>true</default>
                <label>RYF</label>
            </value>
            <value>
                <fullName>VYF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>