unpackaged/main/default/objects/Opportunity/fields/Credit_Management__c.field-meta.xml
<CustomField>
    <fullName>Credit_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crédit Management</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunit_s</relationshipName>
    <type>Lookup</type>
</CustomField>