unpackaged/main/default/objects/Opportunity/fields/Date_cloture_appel_offre__c.field-meta.xml
<CustomField>
    <fullName>Date_cloture_appel_offre__c</fullName>
    <formula>IF(    ISNULL(Duree_de_validite_jours__c)   ,      NULL     , CloseDate + Duree_de_validite_jours__c)</formula>
    <inlineHelpText>Date de clôture prévue + Durée de validité</inlineHelpText>
    <label>Date de clôture appel d&#39;offre</label>
    <type>Date</type>
</CustomField>