unpackaged/main/default/objects/Opportunity/fields/Date_de_prolongation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_prolongation__c</fullName>
    <label>Date de prolongation</label>
    <type>Date</type>
</CustomField>