unpackaged/main/default/objects/Opportunity/fields/Date_de_signature_effective__c.field-meta.xml
<CustomField>
    <fullName>Date_de_signature_effective__c</fullName>
    <label>Date de signature effective</label>
    <type>Date</type>
</CustomField>