unpackaged/main/default/objects/Opportunity/fields/Date_Livraison__c.field-meta.xml
<CustomField>
    <fullName>Date_Livraison__c</fullName>
    <description>Date de livraison prévue du meuble</description>
    <label>Date Livraison</label>
    <type>Date</type>
</CustomField>