unpackaged/main/default/objects/Opportunity/fields/DateClotureAppelOffre__c.field-meta.xml
<CustomField>
    <fullName>DateClotureAppelOffre__c</fullName>
    <label>Date clôture appel d&#39;offre</label>
    <type>Date</type>
</CustomField>