unpackaged/main/default/objects/Opportunity/fields/DateClotureEffective__c.field-meta.xml
<CustomField>
    <fullName>DateClotureEffective__c</fullName>
    <label>Date clôture effective</label>
    <type>Date</type>
</CustomField>