unpackaged/main/default/objects/Opportunity/fields/DateEmissionPrevue__c.field-meta.xml
<CustomField>
    <fullName>DateEmissionPrevue__c</fullName>
    <label>Date émission prévue</label>
    <type>Date</type>
</CustomField>