unpackaged/main/default/objects/Opportunity/fields/DateMADPrevue__c.field-meta.xml
<CustomField>
    <fullName>DateMADPrevue__c</fullName>
    <label>Date MAD prévue</label>
    <type>Date</type>
</CustomField>