unpackaged/main/default/objects/Opportunity/fields/DateReceptionAppelOffre__c.field-meta.xml
<CustomField>
    <fullName>DateReceptionAppelOffre__c</fullName>
    <label>Date réception appel d&#39;offre</label>
    <type>Date</type>
</CustomField>