unpackaged/main/default/objects/Opportunity/fields/DateSignatureContrat__c.field-meta.xml
<CustomField>
    <fullName>DateSignatureContrat__c</fullName>
    <label>Date signature contrat</label>
    <type>Date</type>
</CustomField>