unpackaged/main/default/objects/Opportunity/fields/DAY_Created_date__c.field-meta.xml
<CustomField>
    <fullName>DAY_Created_date__c</fullName>
    <formula>DAY(DATEVALUE (CreatedDate))</formula>
    <label>DAY (Created date)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>