unpackaged/main/default/objects/Opportunity/fields/DAY_effective_closing_date__c.field-meta.xml
<CustomField>
    <fullName>DAY_effective_closing_date__c</fullName>
    <formula>DAY( DateClotureEffective__c )</formula>
    <label>DAY (effective closing date)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>