unpackaged/main/default/objects/Opportunity/fields/Delegation_DP__c.field-meta.xml
<CustomField>
    <fullName>Delegation_DP__c</fullName>
    <label>Délégation DP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>