unpackaged/main/default/objects/Opportunity/fields/Delegation_DS__c.field-meta.xml
<CustomField>
    <fullName>Delegation_DS__c</fullName>
    <label>Délégation DS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>