unpackaged/main/default/objects/Opportunity/fields/Derogation_contractuelle__c.field-meta.xml
<CustomField>
    <fullName>Derogation_contractuelle__c</fullName>
    <formula>IF(
AND(
CONTAINS( Conditions_Dero__r.RecordType.Name , &quot;Dérogation contractuelle&quot;) ,
ISPICKVAL(Conditions_Dero__r.Statut_Derogation__c , &quot;Approuvée&quot;)
),
true,
false
)</formula>
    <label>Dérogation contractuelle</label>
    <type>Checkbox</type>
</CustomField>