unpackaged/main/default/objects/Opportunity/fields/DescriptionDemande__c.field-meta.xml
<CustomField>
    <fullName>DescriptionDemande__c</fullName>
    <label>Description de la demande / offre</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>