unpackaged/main/default/objects/Opportunity/fields/DeviseOpportunite__c.field-meta.xml
<CustomField>
    <fullName>DeviseOpportunite__c</fullName>
    <formula>TEXT(CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Devise de l&#39;opportunité</label>
    <type>Text</type>
</CustomField>