unpackaged/main/default/objects/Opportunity/fields/Dispense_de_caution__c.field-meta.xml
<CustomField>
    <fullName>Dispense_de_caution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dispense de caution</label>
    <type>Checkbox</type>
</CustomField>