unpackaged/main/default/objects/Opportunity/fields/DNP_Date_Approbation__c.field-meta.xml
<CustomField>
    <fullName>DNP_Date_Approbation__c</fullName>
    <label>DNP Date Approbation</label>
    <type>Date</type>
</CustomField>