unpackaged/main/default/objects/Opportunity/fields/DNP_Nom_Approbateur__c.field-meta.xml
<CustomField>
    <fullName>DNP_Nom_Approbateur__c</fullName>
    <label>DNP Nom Approbateur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>