unpackaged/main/default/objects/Opportunity/fields/DNP_Statut__c.field-meta.xml
<CustomField>
    <fullName>DNP_Statut__c</fullName>
    <label>DNP Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approuvée</fullName>
                <color>#009900</color>
                <label>Approuvée</label>
            </value>
            <value>
                <fullName>Rejetée</fullName>
                <color>#CC0000</color>
                <label>Rejetée</label>
            </value>
            <value>
                <fullName>En attente</fullName>
                <color>#FF9900</color>
                <label>En attente</label>
            </value>
            <value>
                <fullName>Anuulé</fullName>
                <label>Annulé</label>
            </value>
            <value>
                <fullName>En attente DG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>