unpackaged/main/default/objects/Opportunity/fields/DNP_validation_time__c.field-meta.xml
<CustomField>
    <fullName>DNP_validation_time__c</fullName>
    <formula>DNP_Date_Approbation__c - DNP_Date_Soumission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DNP validation time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>