unpackaged/main/default/objects/Opportunity/fields/duration__c.field-meta.xml
<CustomField>
    <fullName>duration__c</fullName>
    <formula>Quantite__c * DureeContrat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>%*duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>