unpackaged/main/default/objects/Opportunity/fields/Duree_de_validite_jours__c.field-meta.xml
<CustomField>
    <fullName>Duree_de_validite_jours__c</fullName>
    <label>Durée de validité (jours)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>