unpackaged/main/default/objects/Opportunity/fields/DureeContrat__c.field-meta.xml
<CustomField>
    <fullName>DureeContrat__c</fullName>
    <inlineHelpText>Durée en mois</inlineHelpText>
    <label>Durée du contrat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>