unpackaged/main/default/objects/Opportunity/fields/Echue_30jrs__c.field-meta.xml
<CustomField>
    <fullName>Echue_30jrs__c</fullName>
    <description>coché si date cloture prévue est dans 30 jours</description>
    <formula>IF(
AND(CloseDate&lt;=Today()+30,Today()-30&lt;=CloseDate),
true,
false)</formula>
    <label>Echue 30jrs</label>
    <type>Checkbox</type>
</CustomField>