unpackaged/main/default/objects/Opportunity/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>Date de fin prévisionnelle</label>
    <type>Date</type>
</CustomField>